WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252309
Zydis fails to build in Debug mode with -Werror=type-limits (GCC 12.2 / SCCACHE)
https://bugs.webkit.org/show_bug.cgi?id=252309
Summary
Zydis fails to build in Debug mode with -Werror=type-limits (GCC 12.2 / SCCACHE)
Claudio Saavedra
Reported
2023-02-15 03:43:30 PST
Should those be using ZYAN_STATIC_ASSERT() instead of ZYAN_ASSERT()? In file included from /app/webkit/WebKitBuild/Debug/JavaScriptCore/DerivedSources/unified-sources/UnifiedSource-fa42537c-2-c.c:1: /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisDecoder.c: In function 'ZydisSetAttributes': /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisDecoder.c:2206:30: error: comparison is always true due to limited range of data type [-Werror=type-limits] /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisDecoder.c:2206:30: error: comparison is always true due to limited range of data type [-Werror=type-limits] /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisDecoder.c:2219:30: error: comparison is always true due to limited range of data type [-Werror=type-limits] /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisDecoder.c:2219:30: error: comparison is always true due to limited range of data type [-Werror=type-limits] /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisDecoder.c:2232:30: error: comparison is always true due to limited range of data type [-Werror=type-limits] /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisDecoder.c:2232:30: error: comparison is always true due to limited range of data type [-Werror=type-limits] /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisDecoder.c: In function 'ZydisSetEffectiveOperandWidth': /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisDecoder.c:3656:33: error: comparison is always true due to limited range of data type [-Werror=type-limits] /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisDecoder.c:3656:33: error: comparison is always true due to limited range of data type [-Werror=type-limits] In file included from /app/webkit/WebKitBuild/Debug/JavaScriptCore/DerivedSources/unified-sources/UnifiedSource-fa42537c-2-c.c:8: /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisSharedData.c: In function 'ZydisGetOperandDefinitions': /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisSharedData.c:123:34: error: comparison is always true due to limited range of data type [-Werror=type-limits] /app/webkit/Source/JavaScriptCore/disassembler/zydis/Zydis/ZydisSharedData.c:123:34: error: comparison is always true due to limited range of data type [-Werror=type-limits] cc1: all warnings being treated as errors sccache: Compiler killed by signal 1 ninja: build stopped: subcommand failed.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2023-02-15 03:47:53 PST
Actually, unless I am missing something, those asserts are useless.
Radar WebKit Bug Importer
Comment 2
2023-02-22 03:44:15 PST
<
rdar://problem/105772644
>
Claudio Saavedra
Comment 3
2023-03-14 07:00:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11492
EWS
Comment 4
2023-03-15 10:21:28 PDT
Committed
261696@main
(4f087256dcd6): <
https://commits.webkit.org/261696@main
> Reviewed commits have been landed. Closing PR #11492 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug