src/SharedData.c
@@ -115,7 +115,6 @@ const ZydisOperandDefinition* ZydisGetOperandDefinitions(
     {
         return ZYAN_NULL;
     }
-    ZYAN_ASSERT(definition->operand_reference != 0xFFFF);
     return &OPERAND_DEFINITIONS[definition->operand_reference];
 }
 #endif
